--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,7 +1,6 @@
-:root {
-  font-family: 'Montserrat', sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@use './reset';
+@use './variables';
+@use './base';
+@use './flex';
+@use './grid';
+@use './media-queries'
