fix: add Header & Footer

--- a/src/assets/styles/_flex.scss
+++ b/src/assets/styles/_flex.scss
@@ -14,10 +14,14 @@
     flex: 1 1 auto;
 }
 
-.justify-content-center {
+.justify-center {
     justify-content: center;
 }
 
-.align-items-center {
+.justify-between {
+    justify-content: space-between;
+}
+
+.align-center {
     align-items: center;
 }
