--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,8 @@
 @use './reset';
+@use './debug';
 @use './variables';
 @use './base';
+@use './utils';
 @use './flex';
 @use './grid';
 @use './media-queries'
