--- a/src/components/Card/index.module.scss
+++ b/src/components/Card/index.module.scss
@@ -53,6 +53,7 @@
         position: absolute;
         bottom: 1.6rem;
         left: 1.6rem;
+        padding-right: 1.5rem;
         color: var(--white);
         font-size: 1.8rem;
         z-index: 1;
