--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,6 +2,7 @@
     --primary: #ff6060;
     --white: #fff;
     --gray: #e3e3e3;
+    --gray-light: #f6f6f6;
     --black: #000;
     --font-montserrat: 'Montserrat', sans-serif;
     --box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
