fix: add page Accommodation

--- a/src/components/Collapse/index.module.scss
+++ b/src/components/Collapse/index.module.scss
@@ -56,7 +56,8 @@
     background: var(--gray-light);
 }
 
-p {
+p,
+ul {
     padding: 2.5rem 2rem;
     font-size: 1.3rem;
     font-family: var(--font-montserrat);
