--- a/src/components/Slideshow/index.module.scss
+++ b/src/components/Slideshow/index.module.scss
@@ -45,12 +45,16 @@
 }
 
 .counter {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    padding: 0.3rem 0.6rem;
-    font-size: 1rem;
-    border-radius: .5rem;
+    display: none;
+
+    @include media.md {
+        display: flex;
+        position: absolute;
+        bottom: 1rem;
+        left: 50%;
+        color: #fff;
+        padding: 0.3rem 0.6rem;
+        font-size: 1.8rem;
+        border-radius: .5rem;
+    }
 }
