--- a/src/components/Banner/index.module.scss
+++ b/src/components/Banner/index.module.scss
@@ -3,13 +3,13 @@
 .hero {
     position: relative;
     overflow: hidden;
-    height: 11.1rem;
+    height: 111px;
     width: 100%;
     border-radius: 1rem;
     box-shadow: var(--box-shadow);
 
     @include media.md {
-        height: 22.3rem;
+        height: 223px;
     }
 }
 
